[package]
name = "self_update"
version = "0.37.0"
description = "Self updates for standalone executables"
repository = "https://github.com/jaemk/self_update"
keywords = ["update", "upgrade", "download", "release"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
authors = ["James Kominick <james@kominick.com>"]
exclude = ["/ci/*", ".travis.yml", "appveyor.yml"]
edition = "2018"

[dependencies]
serde_json = "1"
tempfile = "3"
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
semver = "1.0"
zip = { version = "0.6", default-features = false, features = ["time"], optional = true }
either = { version = "1", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
hyper = "0.14"
indicatif = "0.17"
quick-xml = "0.23"
regex = "1"
log = "0.4"
urlencoding = "2.1"

[features]
default = ["reqwest/default-tls"]
archive-zip = ["zip"]
compression-zip-bzip2 = ["zip/bzip2"]     #
compression-zip-deflate = ["zip/deflate"] #
archive-tar = ["tar"]
compression-flate2 = ["flate2", "either"] #
rustls = ["reqwest/rustls-tls"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
