[package]
name = "self_update"
version = "1.0.0-rc.1"
description = "Self updates for standalone executables"
repository = "https://github.com/jaemk/self_update"
keywords = ["update", "upgrade", "download", "release"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
authors = ["James Kominick <james@kominick.com>"]
exclude = ["/ci/*", ".travis.yml", "appveyor.yml"]
edition = "2018"
rust-version = "1.85"

# Can't enable all features, reqwest and ureq are mutually exclusives
[package.metadata.docs.rs]
features = [
  "reqwest",
  "default-tls",
  "archive-zip",
  "compression-zip-bzip2",
  "compression-zip-deflate",
  "archive-tar",
  "compression-flate2",
  "signatures",
  "checksums",
  "s3-auth",
  "async",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = "1"
serde_json = "1"
tempfile = "3"
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
semver = "1.0"
zip = { version = "8", default-features = false, features = ["time"], optional = true }
either = { version = "1", optional = true }
indicatif = "0.18"
quick-xml = "0.41"
regex = "1"
log = "0.4"
urlencoding = "2.1"
self-replace = "1"
zipsign-api = { version = "0.2", default-features = false, optional = true }

http = "1"

reqwest = { version = "0.13", default-features = false, optional = true, features = ["blocking", "json", "http2"] }

ureq = { version = "3.0.6", optional = true, default-features = false, features = ["gzip", "json", "socks-proxy", "charset"]}

hmac = { version = "0.13", optional = true }
percent-encoding = { version = "2.3.2", optional = true }
sha2 = { version = "0.11.0", optional = true }
time = { version = "0.3.45", optional = true }
url = { version = "2.5.8", optional = true }

tokio = { version = "1", optional = true, default-features = false, features = ["time"] }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["reqwest", "default-tls"]

archive-zip = ["zip", "zipsign-api?/verify-zip"]
compression-zip-bzip2 = ["archive-zip", "zip/bzip2"]
compression-zip-deflate = ["archive-zip", "zip/deflate"]
archive-tar = ["tar", "zipsign-api?/verify-tar"]
compression-flate2 = ["archive-tar", "flate2", "either"]
signatures = ["dep:zipsign-api"]
checksums = ["dep:sha2"]

# Async update API (tokio-only, reqwest-only). Adds `*_async` verbs alongside the unchanged
# blocking API. ureq has no async story, so this requires the `reqwest` client.
async = ["reqwest", "reqwest?/stream", "dep:tokio", "dep:futures-util"]


default-tls = ["reqwest?/native-tls", "ureq?/native-tls"]
rustls = ["reqwest?/rustls", "ureq?/rustls"]

reqwest = ["dep:reqwest"]
ureq = ["dep:ureq"]

# The s3 backend itself needs no feature (it is always compiled). Only private-bucket request
# signing needs a feature (`s3-auth`).
s3-auth = ["dep:hmac", "dep:percent-encoding", "dep:sha2", "dep:url", "dep:time"]
